partialy fix spacing design

--- a/src/styles/callout.css
+++ b/src/styles/callout.css
@@ -3,7 +3,7 @@
 @layer components {
 	[data-callout] {
 		& {
-			@apply my-6 space-y-2 rounded-lg border border-blue-600/20 bg-blue-400/20 p-4 pb-5 dark:border-blue-800/20 dark:bg-blue-600/10;
+			@apply space-y-2 rounded-lg border border-blue-600/20 bg-blue-400/20 p-4 pb-5 dark:border-blue-800/20 dark:bg-blue-600/10;
 		}
 
 		& > [data-callout-title] {
@@ -387,7 +387,10 @@
 	}
 }
 
-/* Remove prose padding inside callouts */
 .prose [data-callout] p {
-	@apply m-0 p-0;
+	@apply mt-0 pt-0;
+}
+
+.prose [data-callout] .expressive-code {
+	@apply mb-0;
 }
