--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,6 +124,6 @@
 	}
 	body {
 		@apply bg-background text-foreground;
-		@apply flex flex-col subpixel-antialiased min-h-screen max-w-(--breakpoint-md) mx-auto px-6 py-12 sm:py-32 md:py-16;
+		@apply flex flex-col subpixel-antialiased min-h-screen max-w-(--breakpoint-md) mx-auto px-6 my-12 sm:my-14 md:my-16;
 	}
 }
